[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grab-site"
version= "3.0.0"
description = "The archivist's web crawler: WARC output, dashboard for all crawls, dynamic ignore patterns"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=8.0",
	"wpull @ https://github.com/matthewcen/ludios_wpull/tarball/master",
	"manhole>=1.5.0",
	"lmdb>=1.3.0",
	"autobahn>=22.1.1",
	"fb-re2>=1.0.7",
	"websockets>=10.3",
    "cchardet>=2.1.7"
]
authors = [
    {name = "Ivan Kozik", email = "ivan@ludios.org"}
]
[project.urls]
homepage = "https://github.com/ArchiveTeam/grab-site"
repository = "https://github.com/ArchiveTeam/grab-site"
documentation = "https://github.com/ArchiveTeam/grab-site"

[project.scripts]
grab-site = "libgrabsite.main:main"
gs-server = "libgrabsite.server:main"
gs-dump-urls = "libgrabsite.dump_urls:main"

[tool.setuptools]
packages = ["libgrabsite"]